docs/style.css
:root {
    --bg: #212121;
    --accent-bg: #2b2b2b;
    --text: #dcdcdc;
    --text-light: #ababab;
    --accent: #ffb300;
    --accent-hover: #ffe099;
    --accent-text: var(--bg);
    --code: #f06292;
    --preformatted: #ccc;
    --disabled: #111;
    --border: #ababab;
}
body {
    color: var(--text);
    background-color: var(--bg);
    margin: auto;
    font-family: Helvetica;
    text-align: center;
    width: max-content;
}

.button,button,input,select,textarea {
    font-size: inherit;
    font-family: inherit;
    padding: .5rem;
    margin-bottom: .5rem;
    border-radius: 5px;
    box-shadow: none;
    max-width: 100%;
    display: inline-block
}
.button, button { background-color: var(--accent); border: none; }
input,select,textarea { color: var(--text); background-color: var(--bg); border: 1px solid var(--border); }


tick-routes { display: block;margin-top: 1rem; }
#routeResult {
    position: fixed;
    left: 10%;
    width: 80%;
    background-color: #333;
}
input.search { width: 50%; }
.route {
    position: relative;
    border-radius: 5px;
    background-color: indianred;
    padding: 1rem;
    padding-left: calc(1rem + 30px);
    margin: 1rem;
}
.route.ticked { background-color: darkolivegreen; }
.route.cancel { background-color: var(--accent); color: var(--accent-text) }

.overview-grid { display: grid; grid-template-columns: 1fr 1fr; }
.overview-grid span { font-size: 2rem; text-align: left;}
.overview-grid span:nth-child(2n+1) {
    display: inline-block;
    text-align: right;
    padding-right: 1rem;
    border-right: 3px solid brown;
    margin-right: 1rem;
}

.green { color: green; }
.red { color: red; }

#chart { width: max-content; margin: auto; }

.route-color {
    width: 22px;
    aspect-ratio: 1;
    display: inline-block;
    position: absolute;
    left: 1rem;
    margin-top: -2px;
}

